# gfk-stop-motion

./: .gitignore  App.cpp  CMakeLists.txt  Doxyfile  Frame.h  GUI.cpp  GUI.h  MyApp.cpp  MyPanel.cpp  MyPanel.h  Parser.h  README.md  Shape.cpp  Shape.h  ShapeDialog.cpp  ShapeDialog.h  gfk-stop-motion.sln  gfk-stop-motion.vcxproj  gfk-stop-motion.vcxproj.filters  test.anim  test1.anim
docs/markdown/: home.md
example-project/: example-project.anim
include/: ConfigClass.h  Frame.h  GUI.cpp  GUI.h  MyPanel.h  Parser.h  Shape.h  ShapeDialog.h  ShapeToParse.h  util.h
src/: ConfigClass.cpp  Frame.cpp  GUI.cpp  MyApp.cpp  MyPanel.cpp  Parser.cpp  Shape.cpp  ShapeDialog.cpp  ShapeToParse.cpp
test-project/: test-project.anim
